# LangAlpha

./: .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile.sandbox  EVALUATE_REPORT.md  agent_config.yaml  config.yaml  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: claude-code-review.yml  test.yml
migrations/versions/: 014_add_chart_annotations.py  015_add_provenance_result_bodies.py  016_add_thread_soft_delete.py
scripts/ops/: calibrate_model_ratings.py  scrub_nul_checkpoint.py
skills/catalyst-calendar/: SKILL.md
skills/chart-annotation/: SKILL.md
skills/check-model/: SKILL.md
skills/comps-analysis/: SKILL.md
skills/dcf-model/: SKILL.md
skills/html-report/: SKILL.md
skills/inline-widget/: SKILL.md
skills/interactive-dashboard/: SKILL.md
skills/ui-design/: SKILL.md
src/config/: env.py  models.py  settings.py
src/data_client/: __init__.py  market_data_provider.py  registry.py
src/data_client/fmp/: financial_source.py  fmp_client.py
src/data_client/tickertick/: __init__.py  client.py  news_source.py
src/data_client/yfinance/: data_source.py  financial_source.py
src/llms/: llm.py  pricing_utils.py
src/llms/extension/: codex.py
src/llms/manifest/: models.json  providers.json
src/ptc_agent/agent/: agent.py  state.py
src/ptc_agent/agent/flash/: agent.py
src/ptc_agent/agent/middleware/: runtime_context.py
src/ptc_agent/agent/prompts/: formatter.py
src/ptc_agent/agent/provenance/: __init__.py  types.py
src/ptc_agent/agent/tools/: bash.py  bash_output.py  file_ops.py
src/ptc_agent/config/: agent.py  loaders.py
src/ptc_agent/core/: mcp_sanitize.py  session.py  tool_generator.py
src/ptc_agent/core/sandbox/: _defaults.py  ptc_sandbox.py
src/server/app/: api_keys.py  cache.py  calendar.py  chart_annotations.py  market_data.py  mcp_servers.py  news.py  oauth.py  public.py  setup.py  threads.py  users.py  utilities.py  vault.py  workspace_files.py  workspace_sandbox.py  workspaces.py
src/server/database/: chart_annotation.py  conversation.py  encryption.py  mcp_servers.py  provenance.py  provenance_bodies.py
src/server/handlers/: cancellation.py  streaming_handler.py  workflow_handler.py
src/server/handlers/chat/: _common.py  flash_workflow.py  llm_config.py  ptc_workflow.py
src/server/models/: additional_context.py  chat.py  mcp_server.py  news.py  user.py
src/server/services/: automation_executor.py  background_registry_store.py  background_task_manager.py  news_refresh_service.py  pdf_render.py  price_monitor.py  provenance_gc.py  workflow_tracker.py  workspace_manager.py
src/server/services/cache/: news_cache_service.py
src/server/utils/: api.py  chart_selection_context.py  checkpointer.py  secret_redactor.py  skill_context.py
src/tools/: search_manifest.py
src/tools/chart_annotation/: __init__.py  schemas.py  tools.py
src/tools/crawler/: scrapling_crawler.py
src/tools/market_data/: implementations.py
src/tools/search_services/bocha/: bocha.py
src/tools/sec/parsers/: regex_parser.py
src/tools/secretary/: utils.py
src/utils/cache/: redis_cache.py
src/utils/storage/: s3_compatible.py
src/utils/tracking/: infrastructure_costs.py
tests/integration/: test_event_buffer_dual_write.py  test_fmp_public_api_contract.py  test_mcp_servers_db.py  test_sse_streams.py  test_yfinance_live.py
tests/integration/sandbox/providers/: test_scrapling_docker.py
tests/unit/config/: test_agent_config.py  test_infrastructure_config.py  test_loaders.py
tests/unit/core/: test_composite_registry.py  test_mcp_sanitize.py  test_session_stop_pristine_mcp.py  test_tool_generator_workspace.py
tests/unit/core/sandbox/: test_mcp_per_workspace_sync.py
tests/unit/data_client/: test_financial_data_protocol.py  test_market_data_provider.py  test_yfinance_data_source.py
tests/unit/data_client/tickertick/: test_news_source.py
tests/unit/llms/: test_codex_extension.py  test_input_modalities.py  test_model_pricing_inheritance.py  test_model_rating_metadata.py
tests/unit/middleware/: test_compaction_request_shape.py  test_subagent_event_capture.py  test_subagent_resume_cleanup.py  test_subagent_token_forwarder.py
tests/unit/middleware/compaction/: test_offload_race.py  test_utils.py
tests/unit/middleware/skills/: test_loaded_skills_reducer.py  test_skill_content.py  test_skill_injection_middleware.py  test_skill_registry.py
tests/unit/prompts/: test_output_format_rendering.py
tests/unit/ptc_agent/agent/: test_aupdate_state_id_stamping.py  test_delta_channel_determinism.py  test_delta_channel_ordering.py  test_delta_channel_resolution.py  test_formatter_workspace.py  test_messages_delta_reducer.py
tests/unit/scripts/ops/: test_scrub_nul_checkpoint.py
tests/unit/server/app/: test_chart_annotations.py  test_consume_background_gen.py  test_malformed_id_middleware.py  test_mcp_catalog.py  test_mcp_servers.py  test_news_api.py  test_preferences_validation.py  test_public_redaction.py  test_threads_malformed_id.py  test_threads_provenance.py  test_users.py  test_workspaces.py  (+2 more)
tests/unit/tools/: test_chart_annotation.py  test_chart_annotation_schema_parity.py  test_market_data_tools.py
web/: intro-preview.html  vite.config.js
web/e2e/: chat.spec.js  shared-chat.spec.js
web/src/: App.tsx
web/src/api/: client.ts
web/src/contexts/: AuthContext.tsx
web/src/hooks/: useSyncUserLocale.ts
web/src/locales/: en-US.json  zh-CN.json
web/src/types/: api.ts  chat.ts  market.ts  sse.ts
(+252 files in other folders)
