[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langalpha-core"
version = "0.1.0"
description = "LangAlpha core"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.28.1",
    # LangChain core packages (v1)
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain_google_genai>=2.0.0",
    "langchain-deepseek>=0.1.4",
    # LangGraph — floor pinned at the beta DeltaChannel on-disk format (messages
    # checkpoints are _DeltaSnapshot/sentinel blobs). langgraph<1.2 cannot read
    # them; downgrading after delta blobs exist strands threads on resume.
    # >=1.2.2 brings upstream id-stamping for DeltaChannel writes (ensure_message_ids
    # in pregel/_messages.py), which stamps id-less BaseMessage/dict/list writes
    # before persistence — the mechanism that keeps reconstruction deterministic
    # paired with the non-minting reducer in ptc_agent.agent.state.
    "langgraph>=1.2.2,<2",
    "langgraph-checkpoint-postgres>=3.1",
    # Other dependencies
    "python-dotenv>=1.0.1",
    # Pinned: we import from scrapling.engines._browsers._controllers /
    # ._stealth (private modules) for shielded session teardown. The leading
    # underscore means scrapling can rename/move these without a semver bump,
    # so a range pin would let `uv lock --upgrade` silently break browser
    # fetches. Bump deliberately after verifying the private API still exists.
    "scrapling[fetchers]==0.4.7",
    "html-to-markdown>=3.5.0",
    "trafilatura>=2.0.0",
    "pdfplumber>=0.10.0",
    "pypdf>=4.0.0",
    "youtube-transcript-api>=1.0.0",
    "playwright",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "websockets>=12.0",
    "pandas>=2.2.3",
    "numpy>=1.24,<3.0",
    "json-repair>=0.7.0",
    "jinja2>=3.1.3",
    "mcp>=1.6.0",
    "psycopg[binary,pool]>=3.2.9",
    "alembic>=1.15.0",
    "sqlalchemy>=2.0.0",
    "yfinance>=1.2.0",
    "matplotlib",
    "mplfinance==0.12.10b0",
    "tabulate",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "seaborn",
    "plotly",
    "alibabacloud_oss_v2",
    "aiofiles==24.1.0",
    "setuptools",
    "rich>=14.2.0",
    "redis>=5.0.0",
    "langchain-qwq>=0.3.0",
    "edgartools>=5.7.2",
    "langsmith-fetch>=0.3.1",
    "structlog",
    # Floor at 0.6.11: that release made the messages delta reducer non-minting
    # (our vendored copy in ptc_agent.agent.state matches it — see the parity test)
    # and switched PatchToolCallsMiddleware off the id-less `Overwrite` write, so
    # langgraph's ensure_message_ids covers every id-less messages write and no
    # app-side id-stamping shim is needed.
    "deepagents>=0.6.11",
    "daytona-sdk>=0.130.0",
    "boto3>=1.42.28",
    "tavily-python>=0.7.18",
    "PyJWT[crypto]>=2.8",
    "langalpha-cli",
    "certifi>=2026.1.4",
    "requests>=2.32.5",
    "croniter>=2.0.0",
    "aiodocker>=0.23.0",
    "charset-normalizer>=3.4.0",
    "opentelemetry-api>=1.41.1",
]

[tool.uv.sources]
langalpha-cli = { path = "libs/ptc-cli", editable = true }

[project.optional-dependencies]
dev = [
    "ruff",
    "black>=24.2.0",
    "langgraph-cli[inmem]>=0.2.10",
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=1.3.0",
]
# OpenTelemetry SDK + OTLP exporter + auto-instrumentations. Install when
# OTEL_EXPORTER_OTLP_ENDPOINT will be set, otherwise the API ships its own
# no-op tracer/meter and these are unnecessary. Contrib instrumentations
# (0.x.bN) are version-locked to core (1.x.x); bump together.
observability = [
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-instrumentation-psycopg>=0.62b1",
    "opentelemetry-instrumentation-redis>=0.62b1",
    "opentelemetry-instrumentation-logging>=0.62b1",
]
# Server-side HTML→PDF export via headless Chromium. Install + run
# `uv run playwright install chromium` to enable the `?format=pdf` routes;
# without it the endpoints return 501 (lazy import, graceful no-op).
pdf = ["playwright>=1.49"]

[tool.hatch.build.targets.wheel]
packages = ["src/ptc_agent"]

[tool.uv]
required-version = ">=0.6.15"

# yfinance caps curl_cffi<0.14 but works fine with 0.14+ (tested).
# scrapling[fetchers] requires curl_cffi>=0.14. Override to resolve the conflict.
override-dependencies = ["curl_cffi>=0.14"]

[tool.ruff.lint]
ignore = ["E741"]  # allow short names like l, O, I (common in OHLCV code)

[tool.ruff.lint.per-file-ignores]
"src/server/app/setup.py" = ["E402"]  # router imports intentionally placed after app creation
"src/llms/__init__.py" = ["E402"]  # patch must be applied before importing modules that use langchain_anthropic

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"
markers = [
    "integration: hits real APIs — requires env vars (deselect with '-m \"not integration\"')",
    "slow: long-running tests (stress, concurrency) -- opt-in",
    "provider_docker: tests requiring Docker daemon",
    "provider_daytona: tests requiring Daytona API key",
]
addopts = "-m 'not integration and not slow'"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
